--- a/connector_odoo/views/product.xml
+++ b/connector_odoo/views/product.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
 
         <record id="product_normal_form_view" model="ir.ui.view">
             <field name="name">product.product.form</field>
@@ -75,7 +74,7 @@
                         <button name="resync" type="object" string="Resync" />
                     </header>
                     <sheet>
-                        <field name="image_medium" widget="image" class="oe_avatar" readonly="1" />
+                        <field name="image_128" widget="image" class="oe_avatar" readonly="1" />
                         <div class="oe_title">
                             <h1>
                             <field name="name" placeholder="Product Name" readonly="1" />
@@ -111,5 +110,4 @@
             </field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
