--- a/connector_odoo/views/product_category.xml
+++ b/connector_odoo/views/product_category.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<openerp>
-	<data>
+<?xml version="1.0" encoding="utf-8" ?>
+<odoo>
 
 		<record id="product_normal_form_view" model="ir.ui.view">
 			<field name="name">product.product.form</field>
@@ -31,7 +30,7 @@
 					<field name="odoo_id" />
 					<field name="backend_id" />
 					<field name="external_id" />
-					<button name="resync" type="object" string="Resync Exp." />
+					<button name="resync" type="object" string="Resync" />
 				</tree>
 			</field>
 		</record>
@@ -44,12 +43,11 @@
 			<field name="arch" type="xml">
 				<form>
 					<header>
-						<button name="resync" type="object" string="Resync Exp." />
+						<button name="resync" type="object" string="Resync" />
 					</header>
 					<sheet>
 
-						<field name="image_medium" widget="image" class="oe_avatar"
-							readonly="1" />
+						<field name="image_medium" widget="image" class="oe_avatar" readonly="1" />
 						<div class="oe_title">
 
 							<h1>
@@ -68,6 +66,8 @@
 								<field name="backend_id" readonly="1" />
 								<field name="external_id" readonly="0" />
 							</group>
+                        </div>
+                    </sheet>
 
 				</form>
 			</field>
@@ -90,5 +90,4 @@
 
 
 
-	</data>
-</openerp>
+</odoo>
