--- a/connector_odoo/views/product_template.xml
+++ b/connector_odoo/views/product_template.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-	<data>
+<odoo>
 
 		<record id="product_normal_form_view" model="ir.ui.view">
 			<field name="name">product.template.form</field>
@@ -27,11 +26,11 @@
 					<field name="name" />
 					<field name="odoo_id" />
 					<field name="backend_id" />
-					<field name="external_id" />				
+					<field name="external_id" />
 				</search>
 			</field>
 		</record>
-		
+
 		<record id="product_template_tree_view" model="ir.ui.view">
 			<field name="name">odoo.product.template.tree</field>
 			<field name="model">odoo.product.template</field>
@@ -62,7 +61,7 @@
 					</header>
 					<sheet>
 
-						<field name="image_medium" widget="image" class="oe_avatar"
+						<field name="image_128" widget="image" class="oe_avatar"
 							readonly="1" />
 						<div class="oe_title">
 							<h1>
@@ -103,5 +102,4 @@
 
 
 
-	</data>
-</openerp>
+</odoo>
