--- a/connector_odoo/wizards/add_backend.xml
+++ b/connector_odoo/wizards/add_backend.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright <YEAR(S)> <AUTHOR(S)> License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 
-<openerp>
-	<data>
+<odoo>
 
 		<record id="wizard_add_backend_view_form" model="ir.ui.view">
 			<field name="name">Bind a product to a backend</field>
@@ -26,25 +25,35 @@
 		<record id="wizard_add_backend_action" model="ir.actions.act_window">
 			<field name="name">Add product to Backend</field>
 			<field name="res_model">connector_odoo.add_backend.wizard</field>
-			<field name="view_type">form</field>
 			<field name="view_mode">form</field>
 			<field name="target">new</field>
 		</record>
 
 
-		<act_window id="product_add_backend_action" name="Add Backend Wizard"
-			src_model="product.product" res_model="connector_odoo.add_backend.wizard"
-			key2="client_action_multi" target="new" view_mode="form" multi="True" />
+		<record id="product_add_backend_action" model="ir.actions.act_window">
+				<field name="name">Add Backend Wizard</field>
+				<field name="binding_model_id" ref="model_product_product" />
+				<field name="res_model">connector_odoo.add_backend.wizard</field>
+				<field name="target">new</field>
+				<field name="view_mode">form</field>
+		</record>
 
-		<act_window id="product_template_add_backend_action" name="Add Backend Wizard"
-			src_model="product.template" res_model="connector_odoo.add_backend.wizard"
-			key2="client_action_multi" target="new" view_mode="form" multi="True" />
+		<record id="product_template_add_backend_action" model="ir.actions.act_window">
+				<field name="name">Add Backend Wizard</field>
+				<field name="binding_model_id" ref="model_product_template" />
+				<field name="res_model">connector_odoo.add_backend.wizard</field>
+				<field name="target">new</field>
+				<field name="view_mode">form</field>
+		</record>
 
-		<act_window id="category_add_backend_action" name="Add Backend Wizard"
-			src_model="product.category" res_model="connector_odoo.add_backend.wizard"
-			key2="client_action_multi" target="new" view_mode="form" multi="True" />
+		<record id="category_add_backend_action" model="ir.actions.act_window">
+				<field name="name">Add Backend Wizard</field>
+				<field name="binding_model_id" ref="model_product_category" />
+				<field name="res_model">connector_odoo.add_backend.wizard</field>
+				<field name="target">new</field>
+				<field name="view_mode">form</field>
+		</record>
 
 
 
-	</data>
-</openerp>
+</odoo>
