[WIP] Addresses imported as jobs
One partner can have a large number of addresses.

--- a/connector_odoo/views/partner.xml
+++ b/connector_odoo/views/partner.xml
@@ -9,7 +9,15 @@
                 <attribute name="invisible" eval="0" />
             </xpath>
             <xpath expr="//notebook/page[@name='connector']" position="inside">
+                <label for="bind_ids" string="Standard link" />
                 <field name="bind_ids" readonly="1" />
+            </xpath>
+            <xpath expr="//notebook/page[@name='connector']" position="inside">
+                <label
+                    for="bind_address_dissapeared_ids"
+                    string="Partner Address (Disappeared)"
+                />
+                <field name="bind_address_dissapeared_ids" readonly="1" />
             </xpath>
         </field>
     </record>
@@ -22,19 +30,12 @@
             <tree>
                 <field name="display_name" />
                 <field name="odoo_id" />
-                <field name="visible_res_partner_address_id" invisible="1" />
-                <field
-                    name="res_partner_address_ids"
-                    readonly="0"
-                    attrs="{'invisible': [('visible_res_partner_address_id','!=', True)]}"
-                />
                 <field name="backend_id" />
                 <field name="external_id" />
                 <button name="resync" type="object" string="Resync" />
             </tree>
         </field>
     </record>
-
 
     <record id="odoo_res_partner_form_view" model="ir.ui.view">
         <field name="name">odoo.res.partner.form</field>
@@ -56,21 +57,6 @@
                             <field name="odoo_id" readonly="0" />
                             <field name="backend_id" readonly="1" />
                             <field name="external_id" readonly="0" />
-                            <field
-                                name="visible_res_partner_address_id"
-                                invisible="1"
-                            />
-                            <field
-                                name="res_partner_address_ids"
-                                readonly="1"
-                                attrs="{'invisible': [('visible_res_partner_address_id','!=', True)]}"
-                            >
-                                <tree create="false" edit="false">
-                                        <field name="external_id" />
-                                        <field name="partner_id" />
-                                        <field name="id" />
-                                    </tree>
-                            </field>
                         </group>
                     </div>
                 </sheet>
@@ -79,6 +65,47 @@
         </field>
     </record>
 
+    <record id="odoo_res_partner_address_disappeared_tree_view" model="ir.ui.view">
+        <field name="name">odoo.res.partner.address.disappeared.tree</field>
+        <field name="model">odoo.res.partner.address.disappeared</field>
 
+        <field name="arch" type="xml">
+            <tree>
+                <field name="display_name" />
+                <field name="odoo_id" />
+                <field name="backend_id" />
+                <field name="external_id" />
+                <button name="resync" type="object" string="Resync" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="odoo_res_partner_address_disappeared_form_view" model="ir.ui.view">
+        <field name="name">odoo.res.partner.address.disappeared.form</field>
+        <field name="model">odoo.res.partner.address.disappeared</field>
+
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="resync" type="object" string="Resync" />
+                </header>
+                <sheet>
+
+                    <div class="oe_title">
+
+                        <h1>
+                            <field name="name" readonly="1" />
+                        </h1>
+                        <group>
+                            <field name="odoo_id" readonly="0" />
+                            <field name="backend_id" readonly="1" />
+                            <field name="external_id" readonly="0" />
+                        </group>
+                    </div>
+                </sheet>
+
+            </form>
+        </field>
+    </record>
 
 </odoo>
