--- a/connector_odoo/views/odoo_connector_menus.xml
+++ b/connector_odoo/views/odoo_connector_menus.xml
@@ -1,130 +1,136 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-        <data>
-
-                <record id="action_odoo_uom" model="ir.actions.act_window">
-                        <field name="name">Odoo UOM</field>
-                        <field name="res_model">odoo.uom.uom</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
-
-                <record id="action_odoo_attributes" model="ir.actions.act_window">
-                        <field name="name">Odoo Attributes</field>
-                        <field name="res_model">odoo.product.attribute</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
-
-                <record id="action_odoo_values" model="ir.actions.act_window">
-                        <field name="name">Odoo Attribute Values</field>
-                        <field name="res_model">odoo.product.attribute.value</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
-
-                <record id="action_odoo_categories" model="ir.actions.act_window">
-                        <field name="name">Odoo product Categories</field>
-                        <field name="res_model">odoo.product.category</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
-
-                <record id="action_odoo_partners" model="ir.actions.act_window">
-                    <field name="name">Odoo Partners</field>
-                    <field name="res_model">odoo.res.partner</field>
-                    <field name="view_mode">tree,form</field>
-            </record>
-
-            <record id="action_odoo_users" model="ir.actions.act_window">
-                <field name="name">Odoo Users</field>
-                <field name="res_model">odoo.res.users</field>
-                <field name="view_mode">tree,form</field>
-        </record>
-
-        <record id="action_odoo_res_partner_category" model="ir.actions.act_window">
-            <field name="name">Odoo Res Partner Category</field>
-            <field name="res_model">odoo.res.partner.category</field>
+    <record id="action_odoo_uom" model="ir.actions.act_window">
+            <field name="name">Odoo UOM</field>
+            <field name="res_model">odoo.uom.uom</field>
             <field name="view_mode">tree,form</field>
     </record>
 
+    <record id="action_odoo_attributes" model="ir.actions.act_window">
+            <field name="name">Odoo Attributes</field>
+            <field name="res_model">odoo.product.attribute</field>
+            <field name="view_mode">tree,form</field>
+    </record>
 
-                <record
-            id="action_odoo_product_templates"
-            model="ir.actions.act_window"
-        >
-                        <field name="name">Odoo Product Templates</field>
-                        <field name="res_model">odoo.product.template</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
+    <record id="action_odoo_values" model="ir.actions.act_window">
+            <field name="name">Odoo Attribute Values</field>
+            <field name="res_model">odoo.product.attribute.value</field>
+            <field name="view_mode">tree,form</field>
+    </record>
 
-                <record id="action_odoo_products" model="ir.actions.act_window">
-                        <field name="name">Odoo Products</field>
-                        <field name="res_model">odoo.product.product</field>
-                        <field name="view_mode">tree,form</field>
-                </record>
+    <record id="action_odoo_categories" model="ir.actions.act_window">
+            <field name="name">Odoo product Categories</field>
+            <field name="res_model">odoo.product.category</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="action_odoo_partners" model="ir.actions.act_window">
+        <field name="name">Odoo Partners</field>
+        <field name="res_model">odoo.res.partner</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="action_odoo_users" model="ir.actions.act_window">
+        <field name="name">Odoo Users</field>
+        <field name="res_model">odoo.res.users</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="action_odoo_res_partner_category" model="ir.actions.act_window">
+        <field name="name">Odoo Res Partner Category</field>
+        <field name="res_model">odoo.res.partner.category</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
 
-                <!-- TODO: Implement security strategy groups="odoo_base.group_oc_manager" -->
-                <menuitem
-            id="menu_odoo_external_objects"
-            name="External Objects"
-            parent="connector_odoo.menu_odoo_root"
-        />
+    <record id="action_odoo_product_templates" model="ir.actions.act_window">
+        <field name="name">Odoo Product Templates</field>
+        <field name="res_model">odoo.product.template</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
-                <menuitem
-            id="menu_odoo_external_uom"
-            name="External UOM"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_uom"
-        />
-                <menuitem
-            id="menu_odoo_external_attribute"
-            name="External Attributes"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_attributes"
-        />
-                <menuitem
-            id="menu_odoo_external_values"
-            name="External Attribute Values"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_attributes"
-        />
-                <menuitem
-            id="menu_odoo_external_product_templates"
-            name="External Product Templates"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_product_templates"
-        />
-                <menuitem
-            id="menu_odoo_external_products"
-            name="External Products"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_products"
-        />
-                <menuitem
-            id="menu_odoo_external_categories"
-            name="External Categories"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_categories"
-        />
+    <record id="action_odoo_products" model="ir.actions.act_window">
+        <field name="name">Odoo Products</field>
+        <field name="res_model">odoo.product.product</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
-        <menuitem
-            id="menu_odoo_external_partners"
-            name="External Partners"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_partners"
-        />
+    <record id="action_odoo_partners_address_disappeared" model="ir.actions.act_window">
+        <field name="name">Odoo Partners Address (Disappeared)</field>
+        <field name="res_model">odoo.res.partner.address.disappeared</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
-        <menuitem
-            id="menu_odoo_external_res_partner_category"
-            name="External Partner Category"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_res_partner_category"
-        />
 
-        <menuitem
-            id="menu_odoo_external_users"
-            name="External Users"
-            parent="menu_odoo_external_objects"
-            action="action_odoo_users"
-        />
+    <!-- TODO: Implement security strategy groups="odoo_base.group_oc_manager" -->
+    <menuitem
+        id="menu_odoo_external_objects"
+        name="External Objects"
+        parent="connector_odoo.menu_odoo_root"
+    />
 
-        </data>
+            <menuitem
+        id="menu_odoo_external_uom"
+        name="External UOM"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_uom"
+    />
+            <menuitem
+        id="menu_odoo_external_attribute"
+        name="External Attributes"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_attributes"
+    />
+            <menuitem
+        id="menu_odoo_external_values"
+        name="External Attribute Values"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_attributes"
+    />
+            <menuitem
+        id="menu_odoo_external_product_templates"
+        name="External Product Templates"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_product_templates"
+    />
+            <menuitem
+        id="menu_odoo_external_products"
+        name="External Products"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_products"
+    />
+            <menuitem
+        id="menu_odoo_external_categories"
+        name="External Categories"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_categories"
+    />
+
+    <menuitem
+        id="menu_odoo_external_partners"
+        name="External Partners"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_partners"
+    />
+
+    <menuitem
+        id="menu_odoo_external_res_partner_category"
+        name="External Partner Category"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_res_partner_category"
+    />
+
+    <menuitem
+        id="menu_odoo_external_users"
+        name="External Users"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_users"
+    />
+
+    <menuitem
+        id="menu_odoo_external_partners_address"
+        name="External Partners Address (Disapeared)"
+        parent="menu_odoo_external_objects"
+        action="action_odoo_partners_address_disappeared"
+    />
 </odoo>
