--- a/connector_odoo/views/product_category.xml
+++ b/connector_odoo/views/product_category.xml
@@ -1,93 +1,66 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-		<record id="product_normal_form_view" model="ir.ui.view">
-			<field name="name">product.product.form</field>
-			<field name="model">product.product</field>
-			<field name="inherit_id" ref="product.product_normal_form_view" />
-			<field name="arch" type="xml">
-				<xpath expr="//notebook/page[@name='connector']" position="attributes">
-					<attribute name="invisible" eval="0" />
+    <record id="product_category_form_view" model="ir.ui.view">
+      <field name="name">product.category.form</field>
+      <field name="model">product.category</field>
+      <field name="inherit_id" ref="product.product_category_form_view" />
+      <field name="arch" type="xml">
+        <xpath expr="//group[@name='first']" position="after">
+            <group string="Odoo Binding" groups="connector.group_connector_manager">
+                <field name="bind_ids" nolabel="1" />
+            </group>
+        </xpath>
+      </field>
+    </record>
 
-				</xpath>
-				<xpath expr="//notebook/page[@name='connector']" position="inside">
-					<field name="bind_ids" readonly="1" />
+    <record id="product_category_search_view" model="ir.ui.view">
+      <field name="name">odoo.product.category.search</field>
+      <field name="model">odoo.product.category</field>
+      <field name="arch" type="xml">
+        <search>
+          <field name="name" />
+          <field name="odoo_id" />
+          <field name="backend_id" />
+          <field name="external_id" />
+        </search>
+      </field>
+    </record>
 
-				</xpath>
-			</field>
-		</record>
+    <record id="product_category_tree_view" model="ir.ui.view">
+      <field name="name">odoo.product.category.tree</field>
+      <field name="model">odoo.product.category</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="id" />
+          <field name="odoo_id" />
+          <field name="backend_id" />
+          <field name="external_id" />
+          <field name="sync_date" />
+          <button name="resync" type="object" string="Resync" />
+        </tree>
+      </field>
+    </record>
 
-
-		<record id="product_product_tree_view" model="ir.ui.view">
-			<field name="name">odoo.product.product.tree</field>
-			<field name="model">odoo.product.product</field>
-
-			<field name="arch" type="xml">
-				<tree>
-					<field name="default_code" />
-					<field name="barcode" />
-					<field name="display_name" />
-					<field name="odoo_id" />
-					<field name="backend_id" />
-					<field name="external_id" />
-					<button name="resync" type="object" string="Resync" />
-				</tree>
-			</field>
-		</record>
-
-
-		<record id="product_product_form_view" model="ir.ui.view">
-			<field name="name">odoo.product.product.form</field>
-			<field name="model">odoo.product.product</field>
-
-			<field name="arch" type="xml">
-				<form>
-					<header>
-						<button name="resync" type="object" string="Resync" />
-					</header>
-					<sheet>
-
-						<field name="image_medium" widget="image" class="oe_avatar" readonly="1" />
-						<div class="oe_title">
-
-							<h1>
-								<field name="name" placeholder="Product Name" readonly="1" />
-							</h1>
-
-
-
-							<group>
-								<field name="default_code" readonly="1" />
-								<field name="barcode" readonly="1" />
-
-							</group>
-							<group>
-								<field name="odoo_id" readonly="0" />
-								<field name="backend_id" readonly="1" />
-								<field name="external_id" readonly="0" />
-							</group>
-                        </div>
-                    </sheet>
-
-				</form>
-			</field>
-		</record>
-
-
-		<record id="product_category_tree_view" model="ir.ui.view">
-			<field name="name">odoo.product.category.tree</field>
-			<field name="model">odoo.product.category</field>
-
-			<field name="arch" type="xml">
-				<tree>
-					<field name="display_name" />
-					<field name="odoo_id" />
-					<field name="backend_id" />
-					<field name="external_id" />
-				</tree>
-			</field>
-		</record>
-
-
+    <record id="odoo_product_category_form_view" model="ir.ui.view">
+      <field name="name">odoo.product.category.form</field>
+      <field name="model">odoo.product.category</field>
+      <field name="arch" type="xml">
+        <form>
+          <header>
+            <button name="resync" type="object" string="Resync" />
+          </header>
+          <sheet>
+            <group>
+              <field name="odoo_id" readonly="0" />
+              <field name="id" readonly="0" />
+              <field name="backend_id" readonly="1" />
+              <field name="external_id" readonly="0" />
+              <field name="sync_date" readonly="0" />
+            </group>
+          </sheet>
+        </form>
+      </field>
+    </record>
 
 </odoo>
