--- a/connector_odoo/views/users.xml
+++ b/connector_odoo/views/users.xml
@@ -8,7 +8,9 @@
         <field name="arch" type="xml">
                 <xpath expr="/form/sheet/notebook" position="inside">
                     <page string="Connectors" name="connector">
-                        <field name="bind_ids" readonly="1" />
+                        <group string="Odoo Bindings">
+                            <field name="bind_ids" readonly="1" nolabel="1" />
+                        </group>
                     </page>
                 </xpath>
         </field>
