--- a/connector_odoo/wizards/add_backend.xml
+++ b/connector_odoo/wizards/add_backend.xml
@@ -1,58 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright <YEAR(S)> <AUTHOR(S)> License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
-
 <odoo>
 
-		<record id="wizard_add_backend_view_form" model="ir.ui.view">
-			<field name="name">Bind a product to a backend</field>
-			<field name="model">connector_odoo.add_backend.wizard</field>
-			<field name="arch" type="xml">
-				<form string="Select event to register">
-					<p>Choose the backend you want to bind the product to</p>
-					<field name="backend_id" />
-					<field name="to_export_ids" />
-					<field name="categ_to_export_ids" />
-					<footer>
-						<button name="action_accept" type="object" string="Accept"
-							class="oe_highlight" />
-						or
-						<button special="cancel" string="Cancel" />
-					</footer>
-				</form>
-			</field>
-		</record>
+        <record id="wizard_add_backend_view_form" model="ir.ui.view">
+            <field name="name">Bind a product to a backend</field>
+            <field name="model">connector_odoo.add_backend.wizard</field>
+            <field name="arch" type="xml">
+                <form string="Select event to register">
+                    <p>Choose the backend you want to bind the product to</p>
+                    <field name="backend_id" />
+                    <field name="to_export_ids" />
+                    <field name="categ_to_export_ids" />
+                    <footer>
+                        <button
+                        name="action_accept"
+                        type="object"
+                        string="Accept"
+                        class="oe_highlight"
+                    />
+                        or
+                        <button special="cancel" string="Cancel" />
+                    </footer>
+                </form>
+            </field>
+        </record>
 
-		<record id="wizard_add_backend_action" model="ir.actions.act_window">
-			<field name="name">Add product to Backend</field>
-			<field name="res_model">connector_odoo.add_backend.wizard</field>
-			<field name="view_mode">form</field>
-			<field name="target">new</field>
-		</record>
+        <record id="wizard_add_backend_action" model="ir.actions.act_window">
+            <field name="name">Add product to Backend</field>
+            <field name="res_model">connector_odoo.add_backend.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
 
 
-		<record id="product_add_backend_action" model="ir.actions.act_window">
-				<field name="name">Add Backend Wizard</field>
-				<field name="binding_model_id" ref="model_product_product" />
-				<field name="res_model">connector_odoo.add_backend.wizard</field>
-				<field name="target">new</field>
-				<field name="view_mode">form</field>
-		</record>
+        <record id="product_add_backend_action" model="ir.actions.act_window">
+                <field name="name">Add Backend Wizard</field>
+                <field name="binding_model_id" ref="model_product_product" />
+                <field name="res_model">connector_odoo.add_backend.wizard</field>
+                <field name="target">new</field>
+                <field name="view_mode">form</field>
+        </record>
 
-		<record id="product_template_add_backend_action" model="ir.actions.act_window">
-				<field name="name">Add Backend Wizard</field>
-				<field name="binding_model_id" ref="model_product_template" />
-				<field name="res_model">connector_odoo.add_backend.wizard</field>
-				<field name="target">new</field>
-				<field name="view_mode">form</field>
-		</record>
+        <record id="product_template_add_backend_action" model="ir.actions.act_window">
+                <field name="name">Add Backend Wizard</field>
+                <field name="binding_model_id" ref="model_product_template" />
+                <field name="res_model">connector_odoo.add_backend.wizard</field>
+                <field name="target">new</field>
+                <field name="view_mode">form</field>
+        </record>
 
-		<record id="category_add_backend_action" model="ir.actions.act_window">
-				<field name="name">Add Backend Wizard</field>
-				<field name="binding_model_id" ref="model_product_category" />
-				<field name="res_model">connector_odoo.add_backend.wizard</field>
-				<field name="target">new</field>
-				<field name="view_mode">form</field>
-		</record>
+        <record id="category_add_backend_action" model="ir.actions.act_window">
+                <field name="name">Add Backend Wizard</field>
+                <field name="binding_model_id" ref="model_product_category" />
+                <field name="res_model">connector_odoo.add_backend.wizard</field>
+                <field name="target">new</field>
+                <field name="view_mode">form</field>
+        </record>
 
 
 
